Update 데이터베이스 및 테이블 생성하기.md

--- a/7장/데이터베이스 및 테이블 생성하기.md
+++ b/7장/데이터베이스 및 테이블 생성하기.md
@@ -3,8 +3,7 @@
   이제부터는 MySQL 프롬프트로 진행함  
   하지만 워크벤치를 사용하는 방법도 설명하겠음  
   프롬프트 사용이 익숙하지 않은 윈도나 macOS 사용자는 워크벤치를 사용해도 됨  
-  다만 프롬프트 생성하는 것과 결과가 조금 다를 수 있으므로  
-  실습 시에는 프롬프트로 진행하는 것을 권장함  
+  다만 프롬프트 생성하는 것과 결과가 조금 다를 수 있으므로 실습 시에는 프롬프트로 진행하는 것을 권장함  
   
 
 ## 데이터베이스 생성하기 
