--- a/7장/테이블 생성하기.md
+++ b/7장/테이블 생성하기.md
@@ -36,4 +36,110 @@ QUERY OK, 0 row affected (0.09 sec)
   컬럼을 정의해두면 앞으로 데이터를 넣을 때 컬럼 규칙에 맞는 정보들만 넣을 수 있음  
   생년월일이나 몸무게와 같이 컬럼으로 만들어두지 않은 정보들은 저장할 수 없음  
   
-- 
+- 각각의 컬럼 이름 옆에는 INT, VARCHAR, TINYINT, TEXT, DATETIME 등이 적혀 있음  
+  컬럼의 자료형을 뜻함  
+  
+  
+- INT는 정수를 의미함.  소수까지 저장하고 싶다면 FLOAT이나 DOUBLE 자료형을 사용함  
+- VARCHAR(자릿수) 외에도 CHAR(자릿수)라는 자료형도 있음.  
+  CHAR는 고정 길이고, VARCHAR는 가변 길이임.  
+  예를 들어, CHAR(10)이면 반드시 길이가 10인 문자열만 넣어야 하고,  
+  VARCHAR(10)일 경우에는 0~10 길이의 문자열을 넣을 수 있음  
+  CHAR에 주어진 길이보다 짧은 문자열을 넣는다면 부족한 자릿수만큼 스페이스가 채워짐  
+  
+- TEXT는 긴 글을 저장할 때 사용함. VARCHAR와 헷갈릴 수 있음.  
+  몇백 자 이내의 문자열은 보통 VARCHAR로 많이 처리하고, 그보다 길면 TEXT로 처리하곤 함.  
+  
+- TINYINT는 -127부터 128까지의 정수를 저장할 때 사용함.  
+  1 또는 0만 저장한다면 불값(Boolean)과 같은 역할을 할 수 있음  
+  
+- DATETIME은 날짜와 시간에 대한 정보를 담고 있음.  
+  날짜 정보만 담는 DATE와 시간 정보만 담는 TIME 자료형도 있음.  
+  이외에도 많은 자료형이 있으나 이 정도가 자주 쓰임.  
+  
+- 자료형 뒤에도 NOT NULL, NULL, UNSIGNED, AUTO_INCREMENT, DEFAULT 등의 옵션이 붙어 있음  
+
+- NULL과 NOT NULL은 빈 칸을 허용할지 여부를 묻는 옵션임.  
+  comment 칼럼만 NULL이고, 나머지는 모두 NOT NULL임.  
+  자기소개를 제외한 나머지 칼럼은 반드시 로우를 생성할 때, 데이터를 입력해주어야 함.  
+  
+- id 칼럼에는 추가로 AUTO_INCREMENT가 붙어 있음.  
+  숫자를 저절로 올리겠다는 뜻임.  
+  예를 들어 처음에 Zero라는 사람의 데이터를 넣으면 MySQL은 알아서 id로 1번을 부여함.  
+  다음에 Nero라는 사람의 데이터를 넣으면 자동으로 id 2번을 부여함.  
+  이를 가능하게 하는 옵션이 AUTO_INCRMENT임.  
+  
+- UNSIGNED는 숫자 자료형에 적용되는 옵션임.  
+  숫자 자료형은 기본적으로 음수 범위를 지원함.  
+  예를 들어 INT는 -2147483648 ~ 214783647까지의 숫자를 저장할 수 있음.  
+  만약 UNSIGNED가 적용되어 있다면 음수는 무시되고 0~4294967295까지 저장할 수 있음.  
+  FLOAT와 DOUBLE에는 UN 적용이 불가능함.  
+  나이처럼 음수가 나올 수 없는 칼럼은 체크해두는 것이 좋음  
+  
+- ZEROFILL은 숫자의 자릿수가 고정되어 있을 때 사용함.  
+  가끔 자료형으로 INT 대신 INT(자릿수)처럼 표현하는 경우가 있음.  
+  이 때, ZEROFILL을 설정해둔다면 비어 있는 자리에 모두 0을 넣음.
+  예를 들어, INT(4)인데 숫자 1을 넣었담녀 0001이 되는 식임.  
+  실습 예제에는 age 칼럼에 UNSIGNED 옵션만 주어짐.  
+  
+- created_at에는 DEFAULT now()라는 옵션이 붙어 있음.    
+  데이터베이스 저장 시 해당 컬럼에 값이 없을 때, MySQL이 기본 값을 넣어줌.  
+  now()는 현재 시각을 넣으라는 뜻임.  
+  now() 대신 CURRENT_TIMESTAMP를 적어도 같은 뜻이 됨.  
+  사용자 정보를 넣으면 created_at 칼럼에는 넣는 순간의 시각이 자동으로 기록됨.  
+  
+- 해당 컬럼이 기본 키인 경우에 PRIMARY KEY 옵션을 설정함.  
+  기본 키란 로우를 대표하는 고유한 값을 의미함.  
+  데이터베이스 데이터를 넣을 때, 로우 단위로 넣음.  
+  이 때 로우들을 구별할 고유한 식별자가 필요함.  
+  이름, 나이, 결혼 여부 컬럼은 다른 사람과 내용이 겹칠 수 있음.  
+  자기소개는 내용을 입력하지 않아도 되므로 고유하지 않음.  
+  따라서 id라는 새로운 컬럼을 하나 만들어 고유한 번호를 부여한 것임.  
+  주민등록번호나 학번과 비슷한 개념임.  
+  MySQL에는 PRIMARY KEY(id)라는 옵션으로 id 컬럼이 기본키임을 알렸음.  
+  
+  
+- UNIQUE INDEX는 해당 값이 고유해야 하는지에 대한 옵션임.  
+  name 컬럼이 해당됨.  
+  인덱스의 이름은 name_UNIQUE로, name 컬럼을 오름차순(ASC)으로 기억하겠다는 것임.  
+  내림차순은 DESC임.  
+  PRIMARY KEY나 UNIQUE INDEX의 경우에는 데이터베이스가 별도로 컬럼을 관리하므로,  
+  조회 시 속도가 빨라짐.  
+  기본 키인 id도 사실 고유해야 하지만,  
+  PRIMARY KEY는 자동으로 UNIQUE INDEX를 포함하므로 따로 적지 않아도 됨.  
+  
+  
+- 여기까지 컬럼에 대한 설정이었음. 이어서 COMMENT, DEFAULT CHARSET, ENGINE은  
+  테이블 자체에 대한 설정임.  
+  
+- COMMENT는 테이블에 대한 보충 설명을 의미함.  
+  이 테이블이 무슨 역할을 하는지 적어두면 됨.  
+  필수는 아님.  
+  
+- DEFAULT CHARSET은 utf8로 설정하지 않으면 한글이 입력되지 않으니  
+  반드시 설정해야 함.  
+  
+- ENGINE은 여러 가지가 있지만, MyISAM과 InnoDB가 제일 많이 사용됨.  
+  이 책에서는 InnoDB를 엔진으로 사용함.  
+  
+- 만들어진 테이블을 확인하는 명령어는 DESC 테이블명임.  
+
+
+  
+  
+  
+
+ 
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
