--- a/7장/테이블 생성하기.md
+++ b/7장/테이블 생성하기.md
@@ -125,6 +125,41 @@ QUERY OK, 0 row affected (0.09 sec)
 - 만들어진 테이블을 확인하는 명령어는 DESC 테이블명임.  
 
 
+### 사용자 댓글
+
+- 이번에는 사용자 댓글을 저장하는 테이블을 만들어봄 
+
+```
+mysql> CREATE TABLE nodejs.comments (
+       id INT NOT NULL AUTO_INCREMENT,
+       commenter INT NOT NULL,
+       comment VARCHAR(100) NOT NULL,
+       created_at DATETIME NOT NULL DEFAULT now(),
+       PRIMARY KEY(id),
+       INDEX commenter_idx (commenter ASC),
+       CONSTRAINT commenter,
+       FOREIGN KEY (commenter),
+       REFERENCES nodejs.users (id),
+       ON DELETE CASCADE
+       ON UPDATE CASCADE
+       COMMENT = '댓글'
+       DEFAULT CHARSET=utf8
+       ENGINE=InnoDB;
+QUERY OK, 0 row affected (0.09 sec)
+```
+
+- comments 테이블에는 id, commenter(댓글을 쓴 사용자 아이디), comment(댓글 내용), created_at(로우 생성일) 컬럼이 있음  
+
+- commenter 컬럼에는 댓글을 작성한 사용자의 id를 저장함  
+  이렇게 다른 테이블의 기본키를 저장하는 칼럼을 외래 키(foreign key)라고 부름  
+  CONSTRAINT [제약조건명] FOREIGN KEY [컬럼명] REFERENCES [참고하는 컬럼명]으로 외래 키를 지정함  
+  commenter 컬럼과 users 테이블의 id 컬럼을 연결함  
+  다른 테이블의 기본 키이므로 commenter 컬럼에 인덱스도 걸어봄  
+  
+- 그 후 ON UPDATE와 ON DELETE는 모두 CASCADE로 설정함  
+  사용자 정보가 수정되거나 삭제되면 그것과 연결된 댓글 정보도 같이 수정하거나 삭제한다는 뜻임  
+  그래야 데이터가 불일치하는 현상이 나타나지 않음  
+  
   
   
   
